# asu

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker.py  justfile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  pre-commit.yml  test.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  random_seed  trustdb.gpg
.gitsecret/paths/: mapping.cfg
ansible/: inventory.yml  playbook.yml
ansible/host_vars/: production.yml
asu/: admin.py  apps.py  asgi.py  celery.py  models.py  urls.py  views.py  wsgi.py
asu/auth/: admin.py  apps.py  middleware.py  permissions.py  schema.py  schemas.py  tasks.py  tests.py  urls.py  views.py
asu/auth/migrations/: 0001_initial.py  0002_application.py  0002_oauth2.py  0003_proxies.py  0003_session.py  0004_application_post_logout_redirect_uris.py  0005_userdeactivation.py  0006_rename_user_constraints.py  0007_userfollowrequest_follow_request_frequents.py  0008_user_language.py  0009_group_permission.py  0010_through_related_names.py  0011_application_allowed_origins_and_more.py  0012_accesstoken_grant_refreshtoken_staticdevice_and_more.py  0012_proxy_models.py  0013_userdeactivation_for_deletion.py
asu/auth/models/: __init__.py  deactivation.py  managers.py  oauth.py  proxy.py  relations.py  session.py  through.py  user.py
asu/auth/serializers/: actions.py  user.py
asu/auth/sessions/: cached_db.py  db.py  middleware.py
asu/core/: admin.py  apps.py  celery.py  urls.py  views.py  wsgi.py
asu/core/fixtures/: user.yaml  vars.yaml
asu/core/gateways/: dev.py  websocket.py
asu/core/migrations/: 0001_initial.py
asu/core/models/: __init__.py  base.py  variable.py
asu/core/settings/: __init__.py  apps.py  django.py  test.py
asu/core/static/: api-schema.yaml
asu/core/templates/: 400.html  403_csrf.html  500.html  docs.html
asu/core/utils/: __init__.py  cache.py  denier.py  file.py  mailing.py  messages.py  openapi.py  reloader.py  rest.py  tasks.py  templatetags.py  views.py  workers.py
asu/fixtures/: oauth.yaml  project_variables.yaml  vars.yaml
asu/gateways/: dev.py  websocket.py
asu/messaging/: apps.py  schema.py  schemas.py  serializers.py  tests.py  urls.py  views.py  websocket.py
asu/messaging/migrations/: 0001_initial.py  0002_conversation_modified_index.py  0002_orphan_messages_trigger.py  0003_orphan_message_trigger.py  0003_remove_interaction_event_interaction_message.py  0004_event_participation_and_more.py  0005_remove_message_date_read_message_reply_to_and_more.py
asu/messaging/models/: __init__.py  conversation.py  event.py  interaction.py  managers.py  message.py  participation.py  request.py  signals.py
asu/migrations/: 0001_initial.py
asu/settings/: __init__.py  apps.py  django.py  test.py
asu/templates/: 403.html  404.html  docs.html
asu/tests/: __init__.py  factories.py
asu/utils/: __init__.py  cache.py  envparse.py  file.py  mailing.py  messages.py  openapi.py  reloader.py  rest.py  tasks.py  templatetags.py  tests.py  typing.py  views.py
asu/verification/: apps.py  serializers.py  tasks.py  urls.py
conf/: django.env
conf/dev/: django.env
conf/prod/: django.env  django.env.secret  postgres.env.secret
deploy/: README.md  web.yaml
deploy/jobs/: collectstatic.yaml
docker/: .env  cli.py  docker-compose.yml
docker/celery/: Dockerfile  Dockerfile.dockerignore
docker/conf/: django.env  postgres.env
docker/dev/: Dockerfile  common.yml  compose.yml  dev.Dockerfile  dev.Dockerfile.dockerignore  docker-compose.yml  entrypoint.sh  workers.yml
docker/prod/: docker-compose.yml
docker/scripts/: entrypoint-celery.sh  entrypoint.sh
docker/web/: Dockerfile
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  features.rst  getting-started.rst  index.rst  license.rst
k8s/: README.md  celery.yaml  ingress.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml  web.yaml
k8s/jobs/: migrate.yaml
scripts/: entrypoint.sh
templates/mailing/: transactional.html
tests/: conftest.py  factories.py  test_asu.py  test_auth.py  test_messaging.py  test_password_reset.py  test_registration.py  test_utils.py  test_verification_email.py  test_verification_password.py  test_verification_registration.py
tests/test_auth/: test_user_blocks.py  test_user_by.py  test_user_deactivation.py  test_user_detail.py  test_user_follows.py  test_user_me.py  test_user_model.py  test_user_password_change.py  test_user_profile_picture.py  test_user_relations.py  test_user_sessions.py
tests/test_core/: test_custom_error_pages.py  test_project_variable.py
tests/test_verification/: test_user_email_change_check.py  test_user_email_change_complete.py  test_user_email_change_send.py  test_user_password_reset.py  test_user_password_reset_check.py  test_user_password_reset_complete.py  test_user_password_reset_send.py  test_user_password_reset_verify.py  test_user_registration_check.py  test_user_registration_complete.py  test_user_registration_create.py  test_user_registration_model.py  test_user_registration_send.py  test_user_registration_verify.py  test_verification_common.py
zaida/: asgi.py  celery.py  urls.py  wsgi.py
zaida/auth/: apps.py  schema.py  tests.py  urls.py  views.py
zaida/fixtures/: user.yaml
zaida/messaging/: apps.py  serializers.py  tests.py  urls.py  views.py  websocket.py
zaida/settings/: apps.py  django.py  test.py
zaida/tests/: factories.py
zaida/utils/: messages.py  rest.py  tests.py
zaida/verification/: apps.py  serializers.py  urls.py
zeynep/: asgi.py  celery.py  envparse.py  mailing.py  settings.py  urls.py  wsgi.py
zeynep/auth/: apps.py  tests.py  urls.py  views.py
zeynep/fixtures/: user.yaml
zeynep/messaging/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py  websocket.py
zeynep/settings/: __init__.py  apps.py  django.py  test.py
zeynep/tests/: factories.py
zeynep/utils/: file.py  messages.py  rest.py  tests.py  views.py
zeynep/verification/: apps.py  managers.py  models.py  serializers.py  urls.py
(+177 files in other folders)
