[project]
name = "asu"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "django[argon2] ~= 5.2",
    "djangorestframework ~= 3.16",
    "asgiref ~= 3.10",
    "channels ~= 4.3",
    "channels-redis ~= 4.3",
    "drf-spectacular",
    "drf-nested-routers ~= 0.95",
    "django-filter ~= 25.1",
    "django-cors-headers ~= 4.9",
    "django-oauth-toolkit ~= 3.1",
    "django-two-factor-auth ~= 1.18",
    "django-storages ~= 1.14",
    "django-ipware ~= 7.0",
    "django-celery-beat ~= 2.8",
    "django-stubs-ext",
    "django-widget-tweaks ~= 1.5",
    "sorl-thumbnail ~= 12.11",
    "celery ~= 5.5",
    "psycopg[c] ~= 3.2",
    "redis ~= 6.4",
    "hiredis ~= 3.3",
    "Pillow ~= 12.0",
    "python-magic ~= 0.4",
    "boto3 ~= 1.40",
    "phonenumbers ~= 9.0",
    "sentry-sdk ~= 2.42",
    "envanter ~= 1.3",
]

[dependency-groups]
dev = [
    # Testing
    "pytest",
    "pytest-django",
    "pytest-mock",
    "pytest-sugar",
    "pytest-randomly",
    "pytest-xdist",
    "pytest-cov",
    "factory-boy",
    # Typing
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
    "types-oauthlib",
    "types-Pillow",
    "celery-types",
    # Misc
    "daphne",
    "autobahn==24.4.2",
    "django-debug-toolbar",
    "ipython",
    "tblib",
    "watchfiles",
]
prod = [
    "gunicorn ~= 23.0",
    "uvicorn ~= 0.32",
    "uvloop ~= 0.21",
    "httptools ~= 0.6",
    "websockets ~= 13.1",
]

[tool.ruff]
fix = true
show-fixes = true
target-version = "py312"
line-length = 88

[tool.ruff.lint]
fixable = ["I"]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RUF", # Ruff-specific
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming,
    "BLE", # flake8-blind-except
    "DTZ", # flake8-datetimez
    "DJ", # flake8-django
    "FA", # flake8-future-annotations
    "G", # flake8-logging-format
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL", # pylint
    "PERF", # perflint
]
ignore = ["B904", "RUF012", "SIM105", "PTH123", "PLR2004", "PLR0913", "PLR0911"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "django",
    "rest_framework",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
django = ["django"]
rest_framework = ["rest_framework"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*" = ["E501"]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true

[tool.django-stubs]
django_settings_module = "asu.core.settings"

[tool.coverage.run]
source = ["asu"]
omit = [
    "asu/core/gateways/*",
    "asu/core/settings/*",
    "asu/messaging/*",
    "asu/core/utils/workers.py",
    "*/migrations/*",
]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    'if settings.DEBUG',
    'if DEBUG',
    'if TESTING',
    'if getattr\(self, "swagger_fake_view", False\):',
    'raise NotImplementedError',
    'raise AssertionError',
    'def __str__',
    'def __repr__',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "--import-mode=importlib",
    "--ds=asu.core.settings.test",
    "--tb=short",
]
